--- a/static/estilo.css
+++ b/static/estilo.css
@@ -146,7 +146,10 @@ legend {
   margin-left: 2px;
   height: 30px;
 }
-
+/* Ruas */
+.botao[onclick="mudarRuas()"]{
+  margin-top: 15px;
+}
 
 /* Checkbox */
 input[type=checkbox] {
