--- a/grafico/templates/density_map.html
+++ b/grafico/templates/density_map.html
@@ -39,9 +39,17 @@
 
 </div>
 {% endblock %}
-
-
-
+{% block 'div_botao' %}
+<button class="botao" onclick="atualizarMapaComParametros();atualizar_rua()">Atualizar</button> 
+{% endblock %}
+{% block 'div_filtro' %}
+<div class="container">
+    <div class="container-filtros">
+      <div class="titulo-filtro">
+        <img src="{% static 'imagens/icone-filtro.png' %}" alt="icone filtro">
+        <h3>Filtros</h3>
+      </div>
+{% endblock %}
 
 
 
