--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,8 @@
     
   </nav>
 
-  <div class="container">
-    <div class="container-filtros">
-      <div class="titulo-filtro">
-        <img src="{% static 'imagens/icone-filtro.png' %}" alt="icone filtro">
-        <h3>Filtros</h3>
-      </div>
+  {% block 'div_filtro' %} {% endblock %}
+
 
       {% block 'colorConfiguration' %}{% endblock %}
       {% block 'data' %}{% endblock %}
@@ -70,7 +66,7 @@
 
       {% block 'filtro_veiculos' %}{% endblock %}
 
-       <button class="botao" onclick="atualizarMapaComParametros();atualizar_rua()">Atualizar</button> 
+       {% block 'div_botao' %}{% endblock %}
 
 
     {% block 'dashboard1' %}{% endblock %}
