Criado pagina home

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
       </a>
 
 
-      <a href="#">
-        <li>Sobre</li>
+      <a href="/grafico/home/">
+        <li>Home</li>
       </a>
       <a href="/">
 
