--- a/grafico/templates/home.html
+++ b/grafico/templates/home.html
@@ -68,7 +68,7 @@
     <h2>Sistema de Monitoramento de Tráfego</h2>
 
     <div class="container-botoes">
-        <a href="/grafico/density-map/"><button class="botao um">Grafico</button></a>
+        <a href="/grafico/density-map/?param1=01/12/2024&param2=00:00&param3=carros%20motos%20&ruas=Tereza%20Lera%20Paoletti"><button class="botao um">Grafico</button></a>
         <a href="/grafico/relatorio/"><button class="botao">Gerar Relatorio</button></a>
     </div>
 
